# laughing-invention

./: .gitignore  CMakeExclude.txt  CMakeInclude.txt  CMakeLists.txt  COPYLEFT.txt  COPYRIGHT.txt  Makefile  Makefile.Compilers  Makefile.Dependencies  Makefile.Includes  Makefile.debug.Compilers  MergeLog.markdown  README.txt  Source.Dependencies.md  TO_DO.md  apply_astyle_to_fei_source.sh  build_libraries  bump_version.sh  clean.sh  cleanall.sh  make.sh  makeall.sh
API/: CPPIncludes.h  CPPIncludes_Parallel.h  ESSI_API.h  api.h
API/Constitutive_Driver/: simulate_constitutive_testing_BardetLT_path.h  simulate_constitutive_testing_DirectStrain_path.h  simulate_constitutive_testing_for_constant_p_triaxial.h  simulate_constitutive_testing_for_drained_triaxial.h  simulate_constitutive_testing_for_drained_triaxial_LT.h  simulate_constitutive_testing_for_undrained_simple_shear.h  simulate_constitutive_testing_for_undrained_triaxial.h  simulate_constitutive_testing_for_undrained_triaxial_stress_control.h
API/MODELING/: StateWriter.h  add_acceleration_field.h  add_build_section.h  add_constitutive_model_NDMaterialLT_New_Pisano.h  add_constitutive_model_NDMaterialLT_camclay.h  add_constitutive_model_NDMaterialLT_druckerprager.h  add_constitutive_model_NDMaterialLT_druckerprager_armstrong_frederick.h  add_constitutive_model_NDMaterialLT_druckerprager_armstrong_frederick_le.h  add_constitutive_model_NDMaterialLT_druckerprager_armstrong_frederick_ne.h  add_constitutive_model_NDMaterialLT_druckerprager_non_associate_armstrong_frederick.h  add_constitutive_model_NDMaterialLT_druckerprager_non_associate_linear_hardening.h  add_constitutive_model_NDMaterialLT_druckerpragervonmises.h  add_constitutive_model_NDMaterialLT_linear_elastic_isotropic_3d.h  add_constitutive_model_NDMaterialLT_pisano.h  add_constitutive_model_NDMaterialLT_roundedMohrCoulomb.h  add_constitutive_model_NDMaterialLT_sanisand_2004.h  add_constitutive_model_NDMaterialLT_vonMises_ArmstrongFrederick.h  add_constitutive_model_NDMaterialLT_vonmises.h  add_constitutive_model_NDMaterialLT_vonmises_perfectly_plastic.h  add_constitutive_model_NDMaterial_accelerated_camclay.h  add_constitutive_model_NDMaterial_accelerated_druckerprager_isotropic_hardening.h  add_constitutive_model_NDMaterial_accelerated_druckerprager_kinematic_hardening.h  add_constitutive_model_NDMaterial_accelerated_druckerprager_perfectly_plastic.h  add_constitutive_model_NDMaterial_accelerated_vonmises_isotropic_hardening.h  add_constitutive_model_NDMaterial_accelerated_vonmises_kinematic_hardening.h  add_constitutive_model_NDMaterial_accelerated_vonmises_linear_kinematic_hardening.h  add_constitutive_model_NDMaterial_accelerated_vonmises_perfectly_plastic.h  add_constitutive_model_NDMaterial_camclay.h  add_constitutive_model_NDMaterial_druckerprager_isotropic_hardening.h  add_constitutive_model_NDMaterial_druckerprager_kinematic_hardening.h  add_constitutive_model_NDMaterial_druckerprager_perfectly_plastic.h  add_constitutive_model_NDMaterial_linear_elastic_crossanisotropic.h  add_constitutive_model_NDMaterial_linear_elastic_isotropic_3d.h  (+171 more)
API/SIMULATION/: enable_output.h  (+47 more)
CompGeoMechUCD_FiniteElements/: CMakeLists.txt  CompGeoMechUCD_FiniteElements.h  Makefile  NewElementTemplate.cpp  NewElementTemplate.h  NewElementTemplete.cpp  NewElementTemplete.h
CompGeoMechUCD_MaterialModeling/: BardetConstraint.cpp  BardetConstraint.h  BardetConstraintLT.cpp  BardetConstraintLT.h  CMakeLists.txt  CompGeoMechUCD_MaterialModeling.h  DirectStrainConstitutiveDriver.cpp  DirectStrainConstitutiveDriver.h  ElasticCrossAnisotropic.cpp  ElasticCrossAnisotropic.h  ElasticIsotropic3D.cpp  ElasticIsotropic3D.h  ElasticIsotropicMaterial.cpp  ElasticIsotropicMaterial.h  Makefile  Makefile.bak  Material.cpp  Material.h  NDMaterial.cpp  NDMaterial.h  TwoStageEquivalentElasticIsotropic3D.cpp  TwoStageEquivalentElasticIsotropic3D.h
CompGeoMechUCD_Miscellaneous/: CMakeLists.txt  Makefile
DSL/: .gitignore  CMakeExclude.txt  CMakeLists.txt  Makefile  Makefile.bak  argcheck.cpp  argcheck.h  available_commands.txt  command_patterns.cpp  command_suggestion.cpp  command_suggestion.h  create.sh  create_feidslcaller.cpp  dsl_actions.h  fei.lang.tags  feiast.h  feidslcaller.h  feidslcaller_h_07232014.bak  feidslcaller_typedefs.h  feiexceptions.cpp  feiexceptions.h  feimath.h  feiparser.l  feiparser.lex.cpp  feiparser.lex.cpp.orig  feiparser.tab.cpp  feiparser.tab.cpp.orig  feiparser.tab.hh  feiparser.tab.hh.orig  feiparser.yy  feivariable.h  feivector.h  gen_snips.py  generate_command_patterns.cpp  generate_dsl_to_ebl_report.py  keywords.list  makedocumentation.cpp  snips.txt  stack.hh
Makefiles/: Makefile.Compilers.essicomputer  Makefile.Includes.essicomputer
ModifiedOpenSeesServices/: CMakeLists.txt  COPYRIGHT  G3Globals.h  Makefile  OPS_Globals.h  bool.h  classTags.h  remote.h
UCB_Elements/: CMakeLists.txt  Makefile
compile_by_all_compilers/: Makefile.clang.debug.Compilers  Makefile.gcc.debug.Compilers  compile_by_clang.sh  compile_by_clang_debug.sh  compile_by_gcc.sh  compile_by_gcc_debug.sh
nDarray/: API_nDarray.sh  BJmath_tst.cpp  BJmatrix.cpp  BJmatrix.h  BJtensor.cpp  BJtensor.h  BJvector.cpp  BJvector.h  CMakeExclude.txt  CMakeLists.txt  Cosseratstraint.cpp  Cosseratstraint.h  Cosseratstresst.cpp  Cosseratstresst.h  Doxyfile-nDarray  F2C.cc  Jamroot  JeremyLea.cpp  Makefile  Tensor.h  basics.cpp  basics.h  boost-build.jam  el-pl-test.cpp  elast_Amit_tst.cpp  elast_alisa.cpp  elast_tst.cpp  math_tst.cpp  nDarray.cpp  nDarray.h  straint.cpp  straint.h  stresst.cpp  stresst.h  temp.html  tensorproduct_types.txt  test.txt  uradi_ovo.bre
small_utility_programs/: CMakeLists.txt  Element_renumber_GiD_to_FEI  Element_renumber_GiD_to_FEI.c  Element_renumber_GiD_to_FEI_Nima  Element_renumber_GiD_to_FEI_Nima.c  Example_Makefile_for_Compiling_ESSI_C_Output  GID_1Elements.msh  GID_9Elements.msh  Makefile  TimeHistory_Column_to_Row.cpp  generate_DRM_motions_HDF5.py  input.in  input_file_for_GID_to_FEI_element_conversion.in
test_suite/: Makefile  readme.md  verification_results.html
(+2256 files in other folders)
